# cann-recipes-embodied-intelligence

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTION.md  DISCLAIMER.md  README.md  Third_Party_Open_Source_Software_Notice
3d_vision/Hunyuan3D/: README.md  minimal_demo_npu.py  requirements.txt  set_env.sh
3d_vision/gaussian_splatting/: README.md  train.py  train_all.sh
3d_vision/gaussian_splatting/datasets/: colmap.py  download_dataset.py  normalize.py
3d_vision/gaussian_splatting/gsplat/: distributed.py  utils.py
3d_vision/gaussian_splatting/rasterization/: config.py  rasterizer.py  runner.py  utils.py
3d_vision/vggt/: README.md  README_en.md  demo_infer.py  infer_platform_env_prepare.sh  infer_test.sh  requirements.txt
3d_vision/vggt/quant/: vggt_utils.py
docs/: deployment_troubleshooting.md
docs/3d_vision/Hunyuan3D/: Hunyuan3D_optimization.md
docs/3d_vision/vggt/: vggt_accurancy_evaluation.md
docs/manipulation/GR00T N1.6/: README.md
docs/models/pi0/: README.md
docs/navigation/alpamayo-r1/: README.md
docs/world_model/Cosmos/: README.md
locomotion/LQC/: .gitignore  .gitmodules  CMakeLists.txt  README.md  auto_patch_config.sh  build.py  requirements.txt  set_env.sh  set_render.sh
locomotion/LQC/configs/g1_15dof/: env.yml  ppo.yml
locomotion/LQC/configs/g1_15dof.rough/: env.yml  ppo.yml
locomotion/LQC/configs/go2/: env.yml  ppo.yml
locomotion/LQC/lltk/: __init__.py  task_registry.py
locomotion/LQC/lltk/interface/: __init__.py  gym_interface.py  interface.py
locomotion/LQC/lltk/utils/: __init__.py  export.py  joystick.py  logger.py  profile.py  sprint.py  stream.py  timer.py
locomotion/LQC/lltk/utils/velocity_tracking/: __init__.py  agent_factory.py  arguments.py  benchmark.py  cfg_helper.py  commander.py  player.py  run_loader.py  solver.py  symmetry.py
locomotion/LQC/scripts/: play.py  train.py
locomotion/NMR/: LICENSE  README.md  THIRD_PARTY_LICENSES.md  setup.py
locomotion/NMR/configs/: default_runtime.py  retarget_fwd.py
locomotion/NMR/licenses/: BSD-2-Clause.txt  BSD-3-Clause.txt  README.md  SMPL-X-License-Notice.md  SnapMoGen-Non-Commercial-License.txt
manipulation/Isaac-GR00T/: README.md  pyproject.toml  requirements.txt  set_conda_env.sh  setup.sh
manipulation/alpamayo-r1/: README.md
manipulation/spirit-v1.5/infer_with_torch/: README.md  attention_processor_patch.py  infer_mozrobot_ascend.py  modeling_spirit_vla.py  pyproject.toml  requirements.txt
models/pi0/: README.md  download_code_and_data.sh  modeling_pi0.py  paligemma_with_expert.py  pyproject.toml  run_pi0_inference.sh  test_pi0_on_ascend.py
module/dit_cache/: cache_method.py
navigation/alpamayo-r1/: README.md
ops/ascendc/: CMakeLists.txt  build.sh  pyproject.toml  setup.py
ops/ascendc/cmake/: config.cmake  func.cmake  intf.cmake  makeself.cmake
ops/ascendc/cmake/util/: __init__.py  ascendc_bin_param_build.py  ascendc_impl_build.py  ascendc_ops_config.py  ascendc_replay_build.py  batch_replay_impl.temp  code_channel_infer.py  const_var.py  gen_impl_and_mrege_json.sh  gen_ops_filter.sh  gen_version_info.sh  insert_op_info.py  insert_simplified_keys.py  kernel_entry.py  kernel_impl.temp  merge_aicpu_info_json.sh  opdesc_parser.py  parse_ini_to_json.py  preset_parse.py  replay_codegen.py  replay_impl.temp  tiling_data_def_build.py
ops/ascendc/kernels/: CMakeLists.txt
ops/ascendc/kernels/op_host/: calc_render_bwd_var_clip_gsids.cpp  calc_render_bwd_var_clip_gsids_tiling.h  calc_render_fwd_double_clip_gsids.cpp  calc_render_fwd_double_clip_gsids_tiling.h  flash_gaussian_build_mask.cpp  flash_gaussian_build_mask_tiling.h  fully_fused_projection_bwd.cpp  fully_fused_projection_bwd_tiling.h  gaussian_filter.cpp  gaussian_filter_tiling.h  gaussian_sort.cpp  gaussian_sort_tiling.h  projection_three_dims_gaussian_forward.cpp  projection_three_dims_gaussian_forward_tiling.h  quat_scales_to_covars.cpp  quat_scales_to_covars_tiling.h  spherical_harmonics_bwd.cpp  spherical_harmonics_bwd_tiling.h  spherical_harmonics_forward.cpp  spherical_harmonics_forward_tiling.h
ops/ascendc/kernels/op_kernel/: calc_render_bwd_var_clip_gsids.cpp  calc_render_fwd_double_clip_gsids.cpp  flash_gaussian_build_mask.cpp  fully_fused_projection_bwd.cpp  fully_fused_projection_bwd.h  fully_fused_projection_bwd_common.h  gaussian_filter.cpp  gaussian_filter.h  gaussian_filter_common.h  gaussian_sort.cpp  gaussian_sort_common.h  projection_three_dims_gaussian_forward.cpp  quat_scales_to_covars.cpp  spherical_harmonics_bwd.cpp  spherical_harmonics_bwd.h  spherical_harmonics_bwd_common.h  spherical_harmonics_forward.cpp
ops/ascendc/meta_gauss_render/: __init__.py
ops/ascendc/meta_gauss_render/_C/: __init__.pyi
ops/ascendc/meta_gauss_render/csrc/: CMakeLists.txt  CalcRender.cpp  FlashGaussianBuildMask.cpp  FullyFusedProjectionBwd.cpp  GaussianFilter.cpp  GaussianSort.cpp  GetRenderSchedule.cpp  OpApiCommon.cpp  OpApiCommon.h  ProjectionThreeDimsGaussianForward.cpp  QuatScalesToCovars.cpp  SphericalHarmonicsBwd.cpp  SphericalHarmonicsForward.cpp  common.h  functions.h  pybind.cpp
ops/ascendc/meta_gauss_render/ops/: calc_render.py  flash_gaussian_build_mask.py  gaussian_filter.py  gaussian_sort.py  get_render_schedule.py  projection_three_dims_gaussian_fused.py  spherical_harmonics.py
ops/ascendc/scripts/: build_kernel.sh  install_kernel.sh  retry.sh
ops/ascendc/tests/: test_calc_render_bwd.py  test_calc_render_fwd.py  test_flash_gaussian_build_mask.py  test_gaussian_filter.py  test_gaussian_sort.py  test_projection_3dgs_bwd.py  test_projection_3dgs_forward.py  test_spherical_harmonics.py  test_spherical_harmonics_bwd.py
world_model/agibot-arm-world-model/: README.md  requirements.txt
world_model/cosmos-predict2.5/: README.md  decord_install.sh  ffmpeg_install.sh  inference_npu.sh  npu_adapt.sh  pyproject.toml
world_model/cosmos-predict2.5/adaptor_patches/: monkey_patch.py
world_model/cosmos-predict2.5/examples/: inference.py
world_model/cosmos-transfer2.5/: README.md  decord_install.sh  ffmpeg_install.sh  npu_adapt.sh  nvidia_remove.sh  pyproject.toml
(+168 files in other folders)
