# Copyright (c) Huawei Technologies Co., Ltd. 2025. All rights reserved.
#
# The code snippet comes from DrivingSDK (https://gitcode.com/Ascend/DrivingSDK).
#
# Copyright (c) Huawei Technologies Co., Ltd. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# --------------------------------------------------------------------------------

[build-system]
requires = [
    "setuptools",
    "wheel",
    "numpy",
    "pyyaml",
    "cmake",
    "typing-extensions>=4.10.0",
]

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
src_paths = ["meta_gauss_render"]
extra_standard_library = ["typing_extensions"]
skip_gitignore = true
atomic = true
profile = "black"
indent = 4
line_length = 120
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
