# Adapted from
# cosmos-predict2.5/pyproject.toml
# Copyright (c) 2026, HUAWEI CORPORATION.  All rights reserved.
# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosmos-predict2"
dynamic = ["version"]
authors = [
  {name = "NVIDIA Corporation"},
]
description = "Cosmos Predict2 World Foundation Model"
requires-python = "==3.10.19"
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: GPU :: NVIDIA CUDA",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "cosmos-oss==0.1.0",
  "torch==2.7.1",
  "torchvision==0.22.1",
  "torchaudio==2.7.1",
  "torch-npu==2.7.1",
  "pynvml==13.0.1"
]

[project.optional-dependencies]
gradio = ["cosmos-oss[gradio]"]


[dependency-groups]
dev = ["cosmos-oss[dev,gradio]"]

[project.readme]
content-type = "text/markdown"
text = '''
# Cosmos-Predict2

[Documentation](https://github.com/nvidia-cosmos/cosmos-predict2/blob/main/README.md)
'''

[project.urls]
documentation = "https://github.com/nvidia-cosmos/cosmos-predict2/blob/main/README.md"
homepage = "https://research.nvidia.com/labs/dir/cosmos-predict2"
issues = "https://github.com/nvidia-cosmos/cosmos-predict2/issues"
repository = "https://github.com/nvidia-cosmos/cosmos-predict2"

[tool.uv]
override-dependencies = ["numpy>=2.0.0"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
cosmos-oss = [{ workspace = true }]
torch       = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio  = { index = "pytorch-cpu" }


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true # Ensures uv only uses this specific index for the configured packages

[tool.hatch.version]
path = "cosmos_predict2/__about__.py"

[tool.hatch.build.targets.sdist]
packages = [
  "cosmos_predict2",
]
include = [
  "sitecustomize.py",
]

[tool.hatch.build.targets.wheel]
packages = [
  "cosmos_predict2",
]
include = [
  "sitecustomize.py",
]
exclude = [
  "*_test.py",
]

[tool.coverage.run]
parallel = true
concurrency = ["thread", "multiprocessing"]
source = ["cosmos_predict2"]
sigterm = true

[tool.coverage.paths]
source = [
  "cosmos_predict2/",
  "*/site-packages/cosmos_predict2/",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@overload",
]