[project]
name = "spirit-vla-opensource"
version = "0.1.0"
description = "SpiritVLA inference-only model"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "torch==2.7.1",
    "torch-npu==2.7.1",
    "torchvision==0.22.1",
    "transformers==4.57.3",
    "diffusers==0.36.0",
    "safetensors==0.7.0",
    "numpy==2.4.0",
    "pillow==12.1.0",
    "requests==2.32.5",
    "scipy==1.16.3",
    "setuptools>=80.9.0",
    "decorator",
    "attrs",
    "psutil",
]
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
[tool.uv.sources]
torch = [ { index = "pytorch-cpu" } ] 
torchvision = [ { index = "pytorch-cpu" } ] 
